--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -8,5 +8,5 @@
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{chapter}{Acknowledgments}
 
-TODO
-Write your acknowledgments here.
+% TODO
+To be written.
