First draft done!

--- a/DawsonThesis.tex
+++ b/DawsonThesis.tex
@@ -312,7 +312,7 @@
 
 \printbibliography[title={References},heading=bibintoc]
 
-\subsection*{Image acknowledgement}
+\subsection*{Image acknowledgment}
 Figs.~\ref{ch:corl:fig:environments} and~\ref{ch:corl:fig:repairs} was created using assets designed by Macrovector/Freepix; used with permission.
 
 % biblatex also supports chapter-by-chapter bibliography, https://tex.stackexchange.com/a/296502/119566
