--- a/appendices/corl_appendix.tex
+++ b/appendices/corl_appendix.tex
@@ -52,7 +52,7 @@ where $COM$ indicates the center of mass of the formation and $\lambda_2(q_t)$ i
 
 \subsection{Grasping}
 
-Each task in the grasping environment involved a target object (either a box or a mug) on a table along with a distractor object (a cube). A 64x64 depth image was rendered from a fixed camera position and passed to a grasp identification policy, which was structured as an auto-encoder with 3 convolutional layers and 3 transposed convolutional layers (each with kernel size 7, stride 2, and 32 channels, and ReLU activations). The policy was trained to identify grasp affordances on the object in the form of an image of the same size as the output highlightling the ``graspable'' regions of the object (this is a common strategy in robot manipulation). $\theta$ includes all parameters of the autoencoder, and the environmental parameters $\phi$ included the 2D pose $[x, y, \psi]$ of the target object and the $x$ position of the distractor object, all treated as Gaussian random variables. The affordance autoencoder network was trained using ground-truth affordances from hand-labelling of the target object.
+Each task in the grasping environment involved a target object (either a box or a mug) on a table along with a distractor object (a cube). A 64x64 depth image was rendered from a fixed camera position and passed to a grasp identification policy, which was structured as an auto-encoder with 3 convolutional layers and 3 transposed convolutional layers (each with kernel size 7, stride 2, and 32 channels, and ReLU activations). The policy was trained to identify grasp affordances on the object in the form of an image of the same size as the output highlighting the ``graspable'' regions of the object (this is a common strategy in robot manipulation). $\theta$ includes all parameters of the autoencoder, and the environmental parameters $\phi$ included the 2D pose $[x, y, \psi]$ of the target object and the $x$ position of the distractor object, all treated as Gaussian random variables. The affordance autoencoder network was trained using ground-truth affordances from hand-labeling of the target object.
 
 \paragraph{Cost} The cost function for all grasping tasks was the mean square error between the predicted and ground-truth grasp affordances.
 
@@ -97,7 +97,7 @@ where the reward at each timestep $r_t$ is based on the minimum distance $\min_i
 
 \subsubsection{Intersection}
 
-The intersection example included a 4-way intersection, with 2 lanes of traffic in each \SI{15}{m} wide road. We placed two non-ego agent moving left to right in the crossing street and one non-ego agent crossing right to left. Similarly to the highway task, these agents were controlled via LQR to track uncertain trajectories centered about straigt lines. The task was simulated for 70 timesteps. The driving policy was trained using behavior cloning with supervision from an oracle with perfect information about the state of the other agents, which we implemented as a receding-horizon optimization-based path planner.
+The intersection example included a 4-way intersection, with 2 lanes of traffic in each \SI{15}{m} wide road. We placed two non-ego agent moving left to right in the crossing street and one non-ego agent crossing right to left. Similarly to the highway task, these agents were controlled via LQR to track uncertain trajectories centered about straight lines. The task was simulated for 70 timesteps. The driving policy was trained using behavior cloning with supervision from an oracle with perfect information about the state of the other agents, which we implemented as a receding-horizon optimization-based path planner.
 
 \paragraph{Cost} The cost was the soft minimum reward observed over the course of the trajectory plus a term to test whether the ego agent successfully crosses the intersection.
 \begin{align}
